Nangband ChangeLog - If it's not broken, let's fix it until it is.
==================

2002-05-12
----------
- Fixed array indices into k_info in object.lua -- C's k_info[0] corresponds
  to k_info[1] in Lua. (pelpel)
- Big screen support for GCU. As nangband -? says, it can be activated
  by nangband -- -b. Curses implementations react differently to SIGWINCH
  and I have no idea how to implement portable resizing... (pelpel)
- Imported lua bit operator implementation from Vanilla 3.0.0 CVS,
  which compiles on lcc, doesn't offend some cpp's with empty arguments
  and is more readable. (pelpel)
- Moved up the "Remaining gold:" display by one line, so that it doesn't
  interact strangely with the shop action prompt. (pelpel)
- Imported a couple of my lua engine fixes cleaned up by rr9 --
  this is only relevant for users of CodeWarrior. (pelpel)
- Removed size_y hack in store.c and rewrote the entire file to use the
  real display height throughout, partly for the sake of clarity and
  partly because it was responsible for some display problems. (pelpel)

2002-05-02
----------
- Fixed bug with monster blows, as suggested by pelpel. (parody)

2002-04-30
----------
- Fixed up lots of the save code, thanks pelpel. (takkaria)
- Added pelpel's equippy chars patch; they are now an option. (takkaria)
- Applied pelpel's main-xaw.c patch. (takkaria)
- Changed referances to 'lite', to 'light'. (parody)
- Added some belts. (parody)

2002-04-29
----------
- Made p_ptr->history a single [250], instead of [4][60]. (takkaria)

2002-04-28
----------
- Many fixes from pelpel.  Character now load, even if they are very
  messed up. (takkaria)
- Twiddled with object recall.  Not quite perfect in relation to the
  new stat code. (takkaria)
- Added a basic monster kill count. (parody)

2002-04-27
----------
- Efficientised the o_ptr->note code.  It now reads/writes a byte for
  whether there is a "note" record.  If there is, it reads/writes it.