@@ -244,7 +244,7 @@ I:40:16:2
 W:60:60:3:40000
 P:0:0d0:7:7:10
 F:STR | WIS | CHR | SPEED | 
-F:RES_FEAR25 | RES_FIRE15 | RES_POIS8 | HIDE_TYPE | 
+F:RES_FEAR25 | RES_FIRE15 | RES_POIS8 | HIDE_TYPE | INSTA_ART | 
 F:ACTIVATE
 A:HEAL1:200:0
 
@@ -255,7 +255,7 @@ N:15:'Evenstar'
 I:40:17:0
 W:40:40:3:25000
 F:HOLD_LIFE | SUST_CON | SUST_WIS | SUST_INT | 
-F:RES_DARK10 | RES_COLD10 | 
+F:RES_DARK10 | RES_COLD10 | INSTA_ART | 
 F:ACTIVATE
 A:RESTORE_LIFE:150:0
 
