@@ -3,6 +3,9 @@ Nangband ChangeLog - If it's not broken, let's fix it until it is.
 
 2002-05-12
 ----------
+- Made timed resists decrement over time; quite cool code, don't know
+  how to explain it clearly, really. (takkaria)
+- Made the "display version" command show the splash screen. (takkaria)
 - Fixed array indices into k_info in object.lua -- C's k_info[0] corresponds
   to k_info[1] in Lua. (pelpel)
 - Big screen support for GCU. As nangband -? says, it can be activated
